--- a/action.yml
+++ b/action.yml
@@ -10,4 +10,5 @@ runs:
       shell: bash
     - run: |
         sudo chsh -s $(which zsh) ${USER}
+      shell: bash
       continue-on-error: true
