--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         uses: gbraad-actions/remove-unwanted@v1
 
       - name: Tailscale
-        uses: tailscale/github-action@v3
+        uses: gbraad-actions/tailscale-action@v1
         with:
           authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
           args: --ssh --accept-dns=false --operator=runner
